# combinators.py

./: README.md  pyproject.toml  pyrightconfig.json
combinators/: __init__.py  _errors.py  _helpers.py  _types.py  ast.py
combinators/collection/: __init__.py  fold.py  partition.py  replicate.py  sequence.py  traverse.py  validate.py
combinators/concurrency/: __init__.py  batch.py  gather.py  parallel.py  race.py  rate_limit.py  zip.py
combinators/concurrency/fluent/: __init__.py  fn.py
combinators/control/: __init__.py  bracket.py  fallback.py  guard.py  recover.py  repeat.py  retry.py
combinators/control/fluent/: __init__.py  fn.py
combinators/lift/: __init__.py  call.py  down.py  up.py
combinators/lift/w/: __init__.py  call.py  down.py  up.py
combinators/lift/writer/: __init__.py  call.py  down.py  up.py
combinators/selection/: __init__.py  best.py  vote.py
combinators/selection/fluent/: __init__.py
combinators/time/: __init__.py  delay.py  timeout.py
combinators/time/fluent/: __init__.py
combinators/transform/: __init__.py  effects.py  filter.py
combinators/transform/fluent/: __init__.py
combinators/writer/: __init__.py  log.py  monad.py  result.py
docs/: README.md  human-guide.md  llm-reference.md  llm_emerges.md  philosophy.md  writing_own_monads.md
examples/: 01_quickstart.py  02_cache_fallback_race_ok.py  03_writer_logs.py  04_call_catching.py  09_llm_resilient_pipeline.py  _infra.py  beautiful_chaining.py
