[project]
name = "combinators-py"
version = "0.2.5"
authors = [{name = "prostomarkeloff", email="prostomarkeloff@was.there" }]
description = "Declarative way to build systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kungfu-fp",
]

[tool.uv.sources]
kungfu = { git = "https://github.com/timoniq/kungfu.git" }
